# lifeops

./: .gitignore  Dockerfile  GEMINI.md  README.md  WRITEUP.md  agents-cli-manifest.yaml  policy.yaml  pyproject.toml
app/: agent.py  fast_api_app.py
app/app_utils/: telemetry.py
app/clients/: base.py  fake.py  mcp.py
app/coordinator/: agent.py
app/core/: action_bus.py  executor.py  pii_filter.py  policy_server.py  state.py  token_broker.py  types.py
app/specialists/: calendar_agent.py  email_agent.py
app/triggers/: ambient.py  interactive.py
docs/: video-script.md  video-teleprompter-plain.md  video-teleprompter.md
examples/: demo.py  live.py
notebooks/: lifeops_capstone.ipynb
tests/eval/: eval_config.yaml
tests/eval/datasets/: safety-gate.json
tests/integration/: test_ambient.py  test_calendar_agent.py  test_coordinator.py  test_email_agent.py  test_entrypoint_import.py  test_fast_api_app.py  test_interactive.py  test_mcp_clients.py  test_safety_invariant.py
tests/unit/: test_action_bus.py  test_executor.py  test_pii_filter.py  test_policy_server.py  test_state.py  test_telemetry.py  test_token_broker.py  test_types.py
