[project]
name = "lifeops"
version = "0.1.0"
description = "Privacy-first personal concierge for email + calendar"
authors = [{name = "Your Name", email = "your@email.com"}]
dependencies = [
    "google-adk[gcp]>=2.0.0,<3.0.0",
    "opentelemetry-sdk>=1.20.0",
    "pyyaml>=6.0,<7.0",
    "cryptography>=42.0,<46.0",
]
requires-python = ">=3.11,<3.14"

[dependency-groups]
dev = [
    "pytest>=9.0.2,<10.0.0",
    "pytest-asyncio>=1.0.0,<2.0.0",
    "opentelemetry-sdk>=1.20.0",
]

[project.optional-dependencies]
eval = [
    "google-adk[eval]>=2.0.0,<3.0.0",
    "google-cloud-aiplatform[evaluation]>=1.156.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
pythonpath = "."
asyncio_default_fixture_loop_scope = "function"
